--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/prod/main.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,9 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@touch-grass/prettier-config": "^1.0.0",
@@ -28,14 +31,18 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
-    "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.5.0",
-    "gulp-prettier": "^4.0.0",
-    "gulp-replace": "^1.1.4",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2"
+    "@types/webpack": "^5.28.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "pinkie-promise": "^2.0.1",
+    "ts-loader": "^9.4.2",
+    "typedoc-webpack-plugin": "^1.1.4",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
