--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "gulp": "^4.0.2",
+    "http": "^0.0.1-security",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
+    "net": "^1.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@touch-grass/prettier-config": "^1.0.0",
@@ -31,18 +32,20 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
-    "@types/webpack": "^5.28.0",
+    "@types/webpack-node-externals": "^2.5.3",
     "copy-webpack-plugin": "^11.0.0",
-    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "gulp": "^4.0.2",
     "pinkie-promise": "^2.0.1",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
