--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "CommonJS",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
@@ -9,6 +9,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "outDir": "./dist",
+    // "paths": {
+    //   "*": ["./node_modules/*"]
+    // },
     "rootDir": "."
   },
   "include": ["src"]
