--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -32,20 +33,30 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
+    "@types/gulp": "^4.0.10",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
+    "@types/prettier": "^2.7.2",
     "@types/webpack-node-externals": "^2.5.3",
+    "@types/webpack-stream": "^3.2.12",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.31.0",
     "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-prettier": "^4.0.0",
     "pinkie-promise": "^2.0.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typedoc-webpack-plugin": "^1.1.4",
+    "typedoc": "^0.23.24",
+    "types-webpack-bundler": "github:droyson/types-webpack-bundler",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "webpack-stream": "^7.0.0"
   }
 }
