--- a/package.json
+++ b/package.json
@@ -15,19 +15,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "events": "^3.3.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "http": "^0.0.1-security",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
-    "net": "^1.0.2",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "util": "^0.12.5"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "@touch-grass/prettier-config": "^1.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
@@ -37,7 +32,6 @@
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
-    "@types/prettier": "^2.7.2",
     "@types/webpack-node-externals": "^2.5.3",
     "@types/webpack-stream": "^3.2.12",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
@@ -45,9 +39,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.31.0",
     "gulp": "^4.0.2",
-    "gulp-eslint": "^6.0.0",
-    "gulp-prettier": "^4.0.0",
-    "pinkie-promise": "^2.0.1",
+    "gulp-eslint-new": "^1.7.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
