--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "dev": "nodemon dist/main.js"
   },
   "keywords": [],
   "author": "",
